# cs336_2025_study

./: .gitignore  ASSIGNMENTS_COMPREHENSIVE_ANALYSIS.md  CLAUDE.md  FINAL_REPORT.md  LICENSE  TODO.txt  run_all.sh  run_all_assignments_gpu.sh
assignment1-basics/: .gitignore  QUICKSTART.md  QUICK_REFERENCE.md  debug_bpe_merge.py  debug_bytes_explanation.py  debug_encode.py  debug_encode_detailed.py  debug_gpt2_detailed.py  debug_gpt2_encoding.py  debug_pat_detailed.py  debug_pat_regex.py  debug_special_tokens.py  debug_tiktoken_comparison.py  debug_unicode_roundtrip.py  debug_vocab_check.py  nohup.out  pyproject.toml  run.sh  tokenize_data.py  train.py  verify_training_cpu.py
assignment1-basics/cs336_basics/: pretokenization_example.py
assignment1-basics/src/: __init__.py  nn_utils.py  optimizer.py  serialization.py
assignment1-basics/src/layers/: __init__.py  attention.py  embedding.py  feed_forward.py  layer_norm.py  linear.py  positional_encoding.py  softmax.py
assignment1-basics/src/modules/: __init__.py  transformer.py
assignment1-basics/src/tokenization/: BPE_TRAINER_GO_STYLE.md  ENCODE_PARALLEL.md  (+22 more)
assignment1-basics/tests/: adapters.py
assignment2-systems/: run.sh
assignment2-systems/cs336_systems/: __init__.py  ddp_bucketed.py  ddp_individual.py  flash_attention_pytorch.py  sharded_optimizer.py
assignment2-systems/tests/: adapters.py
assignment3-scaling/: pyproject.toml  run.sh  scaling_analysis.py
assignment4-data/: pyproject.toml  run.sh
assignment4-data/cs336_data/: __init__.py  data_pipeline.py
assignment4-data/tests/: adapters.py
